# tethys_dataset_services

./: .appveyor.yml  .gitignore  .stickler.yml  .travis.yml  MANIFEST.in  README.md  README.rst  coverage.ini  e2e_test.sh  pyproject.toml  requirements-py2.txt  requirements-py3.txt  requirements.txt  setup.cfg  setup.py  setup_e2e_tests.sh  test.sh  tox.ini
.github/workflows/: e2e_tests.yml  publish.yml  test.yml  unit_tests.yml
appveyor/: setup_geoserver_e2e.bat
tests/: docker-compose.yml  e2e_test.sh  setup_e2e_tests.sh  test_config.py
tests/e2e_tests/: __init__.py  ckan_engine_e2e_tests.py  geoserver_engine_e2e_tests.py
tests/files/: test.xml  test_create_layer.xml  test_create_layer_group.xml  test_create_layer_gwc_layer.xml  test_create_layer_sql_view.xml  test_create_style_rendered.sld
tests/files/grass_ascii/: my_grass.asc  my_grass_invalid.asc
tests/files/shapefile/: test.dbf  test.shp
tests/unit_tests/: test_ckan_engine.py  test_geoserver_engine.py  test_utilities.py
tethys_dataset_services/: __init__.py  temp_test.py  utilities.py  valid_engines.py
tethys_dataset_services/base/: __init__.py  dataset_engine_abc.py  spatial_dataset_engine_abc.py
tethys_dataset_services/engines/: __init__.py  ckan_engine.py  geoserver_engine.py  hydroshare_engine.py
tethys_dataset_services/resources/geoserver/xml_templates/: layer_template.xml
tethys_dataset_services/tests/: ckan_engine_e2e_tests.py  ckan_engine_tests.py  geoserver_engine_e2e_tests.py  geoserver_engine_tests.py  test_config.py  utilities_test.py
tethys_dataset_services/tests/docker/geoserver/: docker-compose.yml
tethys_dataset_services/tests/e2e_tests/: ckan_engine_e2e_tests.py  geoserver_engine_e2e_tests.py
tethys_dataset_services/tests/files/: point.sld
tethys_dataset_services/tests/files/grass_ascii/: my_grass.asc
tethys_dataset_services/tests/files/shapefile/: test.shx
tethys_dataset_services/tests/unit_tests/: ckan_engine_tests.py  geoserver_engine_tests.py  test_ckan_engine.py  test_geoserver_engine.py  utilities_test.py
travis/: run_ckan_e2e_tests.sh  run_e2e_tests.sh  run_unit_tests.sh  setup_ckan_e2e_tests.sh  setup_ckan_tests.sh  setup_e2e_tests.sh  setup_geoserver_e2e_tests.sh
