[metadata]
name = tethys_dataset_services
version = 2.0.2
description = A generic Python interface for dataset services such as GeoServer, CKAN, and HydroShare
author = Nathan Swain
author_email = nswain@aquaveo.com
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_file = LICENSE
keywords = 
url = https://github.com/tethysplatform/tethys_dataset_services
project_urls = 
    Documentation = http://docs.tethysplatform.org/en/stable/tethys_sdk/tethys_services/spatial_dataset_service/base_reference.html
classifiers = 
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
packages = find:
include_package_data = True
python_requires = >= 3.6
install_requires = 
    django
    future
    owslib
    geoserver-restconfig
    requests
    requests_toolbelt
    sqlalchemy
    psycopg2-binary

[options.packages.find]
exclude = tethys_dataset_services/tests

[options.extras_require]
tests = 
    tox
    flake8
    coverage


